# ccil

./: Cargo.toml  README.md
bytecode/: test.ccilb
bytecode_assembly/: test.ccila
ccil_source_files/: tokenizer_stress_test.ccil
docs/: Opcodes.md
examples/assembly/: function.ccila  test.ccila
examples/bytecode/: function.ccilb  test.ccilb
examples/ccil_source_files/: basic_program.ccil  precedence_test.ccil  tokenizer_stress_test.ccil
src/: assembler.rs  compiler.rs  constants.rs  disassembler.rs  lib.rs  main.rs  parser.rs  vm.rs
src/compiler/: emitters.rs  rules.rs
src/parser/: expr.rs  expr_compare.rs  handlers.rs  rules.rs  token.rs
src/vm/: chunk.rs  handle_op.rs  opcode.rs  stack.rs  variable_value.rs
tests/: assembler-test.rs
