[package]
name = "ccil"
version = "0.1.0"
edition = "2024"
default-run = "ccil"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.53", features = ["derive"] }
const_format = { version = "0.2.35", features = ["fmt"] }
ordered-float = "5.1.0"
petgraph = "0.8.3"
rustc-hash = "2.1.1"

[[bin]]
name = "ccil"
path = "src/main.rs"

[[bin]]
name = "ccila"
path = "src/bin/assembler.rs"

[[bin]]
name = "ccild"
path = "src/bin/disassembler.rs"
